Initial Merge of Project Bling Codebase.
Still cleaning up:
- all dashboards
- password change page
- reporting datamart

--- a/App_GlobalResources/JSConsts.resx
+++ b/App_GlobalResources/JSConsts.resx
@@ -151,7 +151,7 @@
     <value>Hierarchy</value>
   </data>
   <data name="TEXT_ACCOUNT_PROPERTIES" xml:space="preserve">
-    <value>Properties</value>
+    <value>Account Info</value>
   </data>
   <data name="TEXT_ACCOUNT_SNAPSHOT" xml:space="preserve">
     <value>Relationship Snapshot</value>
@@ -853,10 +853,10 @@
     <value>View</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_GENERAL_INFO" xml:space="preserve">
-    <value>A &lt;i&gt;Decision&lt;/i&gt;  is used to analyze usage records (rated billing records) and possibly modify charges on the basis of this analysis.  Decisions are necessary when it is impossible to determine the amount by examining a single isolated record. &lt;br/&gt; For example, you may want to give a special rate if the number of telephone minutes used during the month is &gt; 1000.  You can only determine the rate to use after adding up all the usage records.  If the minutes are &gt; 1000, then for each record the rate is changed and a new charge amount is calculated. </value>
+    <value>Example: You want to give a special rate if the number of telephone minutes used during the month is &gt; 1000. You can determine the rate to use only after adding up all the usage records. If the minutes are &gt; 1000, then for each record the rate is changed and a new charge amount is calculated.</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_PARAM_TABLE" xml:space="preserve">
-    <value>A Decision Type must be associated with a Parameter Table, which provides a way to customize key values of the Decision Type.  For example, you might want the 'number of free minutes' to be editable rather than a fixed value.  &lt;br/&gt;&lt;br/&gt;Before a Decision Type is configured, its associated Parameter Table must be created using the Integrated Configuration Environment (ICE).&lt;br/&gt;&lt;br/&gt;NOTE: After you click Next, you cannot choose a different parameter table for this decision type.</value>
+    <value>A Decision Type must be associated with a Parameter Table, which provides a way to customize key values of the Decision Type.  For example, you might want the 'number of free minutes' to be editable rather than a fixed value.  &lt;br/&gt;&lt;br/&gt;Before a Decision Type is configured, its associated Parameter Table must be created using the Integrated Configuration Environment (ICE).</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_ACCOUNT_GROUP" xml:space="preserve">
     <value>Example: One account (a parent) is billed for activity on child accounts. You want to find the total of all charges (parent and children).&lt;br/&gt;&lt;br/&gt;In addition to pulling in other accounts, you  want to ignore the Decision Type for some accounts.  For example, you want the Decision Type to apply only to accounts that receive paperless bills.</value>
@@ -890,18 +890,6 @@
   </data>
   <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD" xml:space="preserve">
     <value>Decisions are used when a monetary charge amount cannot be calculated by looking at a single record. Instead, many usage records must be examined and a total must be the number of events, units of usage, or charge amounts. The total, or aggregate, is then used to help determine the charge amount.</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_ADD_UP_MONETARY_CHARGE" xml:space="preserve">
-    <value>Example: \"Apply a discount if there's over $100 in charges.\"</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_ADD_UP_UNIT_OF_USAGE" xml:space="preserve">
-    <value>Example: \"Use a special rate if over 1,000 minutes.\"</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_COUNT_NUMBER_OF_EVENTS" xml:space="preserve">
-    <value>Example: \"Apply a discount if over 100 calls were made.\"</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_FROM_PARAMETER_TABLE" xml:space="preserve">
-    <value>Usage is aggregated based on the value set in the parameter table.</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_DECISION_PRIORITY" xml:space="preserve">
     <value>Example: There are two decisions that consider the same usage record. Both decisions are configured to consume the usage records. &lt;br/&gt;&lt;br/&gt;The decisions' priority levels determine the order in which to process the decisions. A lower numeric priority level is processed earlier than a higher priority level. Decisions that have the same priority level are processed in nondeterministic order. On the Decision Priority page you can specify the priority level of the decision type you are now configuring.</value>
@@ -939,19 +927,10 @@
   <data name="TITLE_AMPWIZARD_HELP_RESTART_RANGE" xml:space="preserve">
     <value>Help: Restart Range</value>
   </data>
-  <data name="TITLE_AMPWIZARD_HELP_DECISION_RANGE_PRORATION" xml:space="preserve">
-    <value>Help: Decision Range Proration</value>
-  </data>
-	<data name="TITLE_AMPWIZARD_HELP_DECISION_RANGE" xml:space="preserve">
-    <value>Help: Decision Range</value>
-  </data>
-	<data name="TEXT_AMPWIZARD_MORE_DECISION_CYCLE" xml:space="preserve">
+  <data name="TEXT_AMPWIZARD_MORE_DECISION_CYCLE" xml:space="preserve">
     <value>Example: A billing cycle is monthly, but you want to give a special rate if \"more than 1000 minutes are used in three months\". This is known as the Decision Cycle.</value>
   </data>
-	<data name="TITLE_AMPWIZARD_HELP_MORE_DECISION_CYCLE" xml:space="preserve">
-    <value>Help: Decision Cycle</value>
-  </data>
-	<data name="TITLE_AMPWIZARD_ACTIVATION_RESULTS" xml:space="preserve">
+  <data name="TITLE_AMPWIZARD_ACTIVATION_RESULTS" xml:space="preserve">
     <value>Activation Results</value>
   </data>
   <data name="TITLE_AMPWIZARD_ERROR_CHECK_RESULTS" xml:space="preserve">
@@ -971,18 +950,6 @@
   </data>
   <data name="TEXT_AMPWIZARD_HELP_INCREMENTAL_OR_BULK" xml:space="preserve">
     <value>&lt;i&gt;Act on each record individually&lt;/i&gt; means that the decision takes a record, adds it to the total, and if the total is within the range, performs an action.  &lt;i&gt;Act on all the records together&lt;/i&gt; means that the decision totals &lt;u&gt;ALL&lt;/u&gt; the records, and if the total falls within the range, applies the action to &lt;u&gt;ALL&lt;/u&gt; the records.</value>
-  </data>
-  <data name="TITLE_AMPWIZARD_HELP_MULTIBUCKET" xml:space="preserve">
-    <value>Help: Multi-bucket</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_MULTIBUCKET" xml:space="preserve">
-    <value>Act on each individual record.  Usage may have different prices  which are determined by the bucket into which they fall.</value>
-  </data>
-   <data name="TITLE_AMPWIZARD_HELP_SINGLEBUCKET" xml:space="preserve">
-    <value>Help: Single-bucket</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_SINGLEBUCKET" xml:space="preserve">
-    <value>Act on all the records together.  All usage has same price which is determined by total volume.</value>
   </data>
   <data name="TITLE_AMPWIZARD_HELP_UNIT_RATE" xml:space="preserve">
     <value>Help:  New Unit Rate</value>
@@ -1007,12 +974,6 @@
   </data>
   <data name="TEXT_AMPWIZARD_HELP_GENERATED_CHARGE" xml:space="preserve">
     <value>Choose this option to have the Decision Type generate a new Charge or Credit.  You will define the Charge/Credit on the next set of screens.</value>
-  </data>
-  <data name="TITLE_AMPWIZARD_HELP_NO_CHARGE" xml:space="preserve">
-    <value>Help:  None</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_NO_CHARGE" xml:space="preserve">
-    <value>Do not generate a charge for this decision</value>
   </data>
   <data name="TITLE_AMPWIZARD_HELP_GENERATED_CHARGE_GRID" xml:space="preserve">
     <value>Help:  Generated Charges/Credits Grid</value>
@@ -1072,7 +1033,7 @@
     <value>No error message to report.</value>
   </data>
   <data name="TEXT_BACK" xml:space="preserve">
-    <value>Previous</value>
+    <value>Back</value>
   </data>
   <data name="TEXT_APPROVALS_ACTION_APPROVE" xml:space="preserve">
     <value>Approve This Change</value>
@@ -1188,7 +1149,7 @@
   <data name="ERROR_BILL_MESSAGE_DATES" xml:space="preserve">
     <value>Error: End Date needs to be later than Start Date</value>
   </data>
-  <data name="ERROR_SUBSCRIPTION_STARTDATE_BIGGER_ENDDATE" xml:space="preserve">
-    <value>Error validating subscription. The start date is later than the end date.</value>
+  <data name="TEXT_ACCOUNT_ACTIVITY" xml:space="preserve">
+    <value>Account Activity</value>
   </data>
 </root>
