--- a/App_GlobalResources/MainMenu.resx
+++ b/App_GlobalResources/MainMenu.resx
@@ -220,7 +220,7 @@
     <value>Billable Intervals</value>
   </data>
   <data name="TEXT_BILLING_MANAGEMENT" xml:space="preserve">
-    <value>Billing Management</value>
+    <value>Billing</value>
   </data>
   <data name="TEXT_BULK_ADJUST_TRANSACTIONS" xml:space="preserve">
     <value>Bulk Adjust Transactions</value>
@@ -268,7 +268,7 @@
     <value>Dashboard</value>
   </data>
   <data name="TEXT_DATA_EXPORT_REPORT_MANAGEMENT" xml:space="preserve">
-    <value>Data Export Report Management</value>
+    <value>Data Export</value>
   </data>
   <data name="TEXT_DEFAULT_SECURITY" xml:space="preserve">
     <value>Default Security</value>
@@ -277,10 +277,10 @@
     <value>Dismissed</value>
   </data>
   <data name="TEXT_EDIT_MAPPING" xml:space="preserve">
-    <value>Edit Aliases</value>
+    <value>Aliases</value>
   </data>
   <data name="TEXT_EDIT_NAMESPACES" xml:space="preserve">
-    <value>Edit Namespaces</value>
+    <value>Namespaces</value>
   </data>
   <data name="TEXT_EDIT_TEMPLATE" xml:space="preserve">
     <value>Edit Template</value>
@@ -313,7 +313,7 @@
     <value>Feeds</value>
   </data>
   <data name="TEXT_FILE_MANAGEMENT" xml:space="preserve">
-    <value>File Management</value>
+    <value>File Processing</value>
   </data>
   <data name="TEXT_FILES_IN_LAST_2_DAYS" xml:space="preserve">
     <value>Jobs in the Past 2 Days</value>
@@ -346,31 +346,31 @@
     <value>Manage Accounts</value>
   </data>
   <data name="TEXT_MANAGE_ADJUSTMENTS" xml:space="preserve">
-    <value>Manage Adjustments</value>
+    <value>Adjustments</value>
   </data>
   <data name="TEXT_MANAGE_CALENDARS" xml:space="preserve">
-    <value>Manage Calendars</value>
+    <value>Calendars</value>
   </data>
   <data name="TEXT_MANAGE_DATA_EXPORT_FRAMEWORK" xml:space="preserve">
-    <value>Data Export Report Management</value>
+    <value>Data Export</value>
   </data>
   <data name="TEXT_MANAGE_DEFAULT_SECURITY" xml:space="preserve">
     <value>Default Security</value>
   </data>
   <data name="TEXT_MANAGE_MISC_ADJUSTMENTS" xml:space="preserve">
-    <value>Manage Misc. Adjustments</value>
+    <value>Misc. Adjustments</value>
   </data>
   <data name="TEXT_MANAGE_NON_STANDARD_CHARGES" xml:space="preserve">
-    <value>Manage Nonstandard Charges</value>
+    <value>Nonstandard Charges</value>
   </data>
   <data name="TEXT_MANAGE_ORPHAN_ADJUSTMENTS" xml:space="preserve">
-    <value>Manage Orphan Adjustments</value>
+    <value>Orphan Adjustments</value>
   </data>
   <data name="TEXT_MANAGE_REPORTS" xml:space="preserve">
     <value>Manage Reports</value>
   </data>
   <data name="TEXT_MANAGE_ROLES" xml:space="preserve">
-    <value>Manage Roles</value>
+    <value>User Roles</value>
   </data>
   <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
     <value>Manage Security</value>
@@ -439,7 +439,7 @@
     <value>Pay for Accounts</value>
   </data>
   <data name="TEXT_PAY_FOR_ME" xml:space="preserve">
-    <value>Edit Payers</value>
+    <value>Payers</value>
   </data>
   <data name="TEXT_PAYMENT_HISTORY" xml:space="preserve">
     <value>Payment History</value>
@@ -559,7 +559,7 @@
     <value>Update Account</value>
   </data>
   <data name="TEXT_UPDATE_CONTACT" xml:space="preserve">
-    <value>Update Contacts</value>
+    <value>Contacts</value>
   </data>
   <data name="TEXT_UPDATE_EXISTING_REPORT_DEFINITIONS" xml:space="preserve">
     <value>Update Existing Report Definition</value>
@@ -568,16 +568,16 @@
     <value>Usage Server Maintenance</value>
   </data>
   <data name="TEXT_USM_CONFIG" xml:space="preserve">
-    <value>USM Configuration</value>
+    <value>Usage Server</value>
   </data>
   <data name="TEXT_VERSION_INFO" xml:space="preserve">
     <value>Version Information</value>
   </data>
   <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
-    <value>View</value>
+    <value>All Events</value>
   </data>
   <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
-    <value>View Online Bill</value>
+    <value>Online Bill</value>
   </data>
   <data name="TEXT_APPROVAL_FRAMEWORK_MANAGEMENT" xml:space="preserve">
     <value>Approvals</value>
@@ -586,13 +586,13 @@
     <value>View Item History</value>
   </data>
   <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View All Changes</value>
+    <value>All Changes</value>
   </data>
   <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View Pending Changes</value>
+    <value>Pending Changes</value>
   </data>
   <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View Failed Changes</value>
+    <value>Failed Changes</value>
   </data>
   <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
     <value>Shared Properties</value>
@@ -601,7 +601,7 @@
     <value>Payment Transactions</value>
   </data>
   <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
-    <value>Manage AMP Decision Types</value>
+    <value>Decision Types</value>
   </data>
   <data name="TEXT_MANAGE" xml:space="preserve">
     <value>Manage</value>
@@ -610,6 +610,18 @@
     <value>Refresh</value>
   </data>
   <data name="TEXT_SELF_CARE_PORTAL" xml:space="preserve">
-    <value>View Online Bill</value>
+    <value>Self Care Portal</value>
+  </data>
+  <data name="TEXT_ADD_TENANT" xml:space="preserve">
+    <value>Add Partition</value>
+  </data>
+  <data name="TEXT_MASTER_OFFERINGS" xml:space="preserve">
+    <value>Master Product Offerings</value>
+  </data>
+  <data name="TEXT_REPORTS" xml:space="preserve">
+    <value>Reports</value>
+  </data>
+  <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
+    <value>Usage Processing</value>
   </data>
 </root>
