--- a/App_LocalResources/Login.aspx.de.resx
+++ b/App_LocalResources/Login.aspx.de.resx
@@ -142,13 +142,13 @@
         <value>Bis zum nächsten Mal angemeldet bleiben.</value>
     </data>
     <data name="Login1Resource1.UserNameLabelText" xml:space="preserve">
-        <value>Benutzername:</value>
+        <value>Benutzername</value>
     </data>
     <data name="Login1Resource1.UserNameRequiredErrorMessage" xml:space="preserve">
         <value>Der Benutzername muss angegeben werden.</value>
     </data>
     <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet</value>
+        <value>MetraNet | Anmelden</value>
     </data>
     <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
         <value>Kennwort bestätigen</value>
