--- a/App_LocalResources/Login.aspx.es.resx
+++ b/App_LocalResources/Login.aspx.es.resx
@@ -133,7 +133,7 @@
         <value>Iniciar sesión</value>
     </data>
     <data name="Login1Resource1.PasswordLabelText" xml:space="preserve">
-        <value>Contraseña:</value>
+        <value>Contraseña</value>
     </data>
     <data name="Login1Resource1.PasswordRequiredErrorMessage" xml:space="preserve">
         <value>Es necesario introducir la contraseña.</value>
@@ -142,13 +142,13 @@
         <value>Recordármelo la próxima vez.</value>
     </data>
     <data name="Login1Resource1.UserNameLabelText" xml:space="preserve">
-        <value>Nombre de usuario :</value>
+        <value>Nombre de usuario</value>
     </data>
     <data name="Login1Resource1.UserNameRequiredErrorMessage" xml:space="preserve">
         <value>Es necesario especificar el nombre de un usuario.</value>
     </data>
     <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet</value>
+        <value>MetraNet | Iniciar sesión</value>
     </data>
     <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
         <value>Confirmar contraseña</value>
