--- a/App_LocalResources/Login.aspx.pt-br.resx
+++ b/App_LocalResources/Login.aspx.pt-br.resx
@@ -133,7 +133,7 @@
         <value>Fazer login</value>
     </data>
     <data name="Login1Resource1.PasswordLabelText" xml:space="preserve">
-        <value>Senha:</value>
+        <value>Senha</value>
     </data>
     <data name="Login1Resource1.PasswordRequiredErrorMessage" xml:space="preserve">
         <value>Uma senha é necessária.</value>
@@ -142,13 +142,13 @@
         <value>Lembre-se de mim na próxima vez.</value>
     </data>
     <data name="Login1Resource1.UserNameLabelText" xml:space="preserve">
-        <value>Nome do usuário:</value>
+        <value>Nome do usuário</value>
     </data>
     <data name="Login1Resource1.UserNameRequiredErrorMessage" xml:space="preserve">
         <value>O nome do usuário é obrigatório.</value>
     </data>
     <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet</value>
+        <value>MetraNet | Fazer login</value>
     </data>
     <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
         <value>Confirmar senha</value>
