FEAT-3300:"View subscription details when approving a subscription create or update" Task FEAT-3457:"Use SU credentials to Get Current Subscription on compare" Task FEAT-3504:"Localize date format and left unlocalized stuff on Page" 1. Use SU credentials not to demand ViewSubscription Capability from Approver; 2. Remove extra space in case few UDRC values; 3. Use current culture for DateTime formats; 4. Localize "set" and "not set" values.

--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es.resx
@@ -147,4 +147,10 @@
   <data name="NO_END_DATE" xml:space="preserve">
     <value>[es] No End Date</value>
   </data>
+  <data name="NOT_SET" xml:space="preserve">
+    <value>[es] not set</value>
+  </data>
+  <data name="SET" xml:space="preserve">
+    <value>[es] set</value>
+  </data>
 </root>
