--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.it.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.it.resx
@@ -147,4 +147,10 @@
   <data name="NO_END_DATE" xml:space="preserve">
     <value>[it] No End Date</value>
   </data>
+  <data name="NOT_SET" xml:space="preserve">
+    <value>[it] not set</value>
+  </data>
+  <data name="SET" xml:space="preserve">
+    <value>[it] set</value>
+  </data>
 </root>
