--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
@@ -147,4 +147,10 @@
   <data name="NO_END_DATE" xml:space="preserve">
     <value>[pt-BR] No End Date</value>
   </data>
+  <data name="NOT_SET" xml:space="preserve">
+    <value>[pt-BR] not set</value>
+  </data>
+  <data name="SET" xml:space="preserve">
+    <value>[pt-BR] set</value>
+  </data>
 </root>
