--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.resx
@@ -147,4 +147,10 @@
   <data name="NO_END_DATE" xml:space="preserve">
     <value>No End Date</value>
   </data>
+  <data name="NOT_SET" xml:space="preserve">
+    <value>not set</value>
+  </data>
+  <data name="SET" xml:space="preserve">
+    <value>set</value>
+  </data>
 </root>
