FEAT-3232 Translate ALL MetraCare pages to French Correct French localization Reviewer YZapara

--- a/Account/App_LocalResources/GenericAddAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/GenericAddAccount.aspx.fr.resx
@@ -220,7 +220,7 @@
         <value>Date d'effet du compte</value>
     </data>
     <data name="tbUserNameResource1.Label" xml:space="preserve">
-        <value>Type d'authentification</value>
+        <value>Nom d'utilisateur</value>
     </data>
     <data name="tbUserNameResource1.MaxLength" xml:space="preserve">
         <value>-1</value>
