--- a/Account/App_LocalResources/UpdateSystemAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/UpdateSystemAccount.aspx.fr.resx
@@ -160,7 +160,7 @@
     <value>MetraNet</value>
   </data>
   <data name="PendingChangeWarning" xml:space="preserve">
-    <value>Ce compte a déjà une modification en attente dans la Approval Framework file. {0}  Cliquez ici pour voir les modifications en attente.</value>
+    <value>Ce compte a déjà une modification en attente . {0}  Cliquez ici pour voir les modifications en attente.</value>
   </data>
   <data name="pnlAccountInfoResource1.Text" xml:space="preserve">
     <value>Informations du compte</value>
