FEAT-3466 Make a new .aspx page to hold the new grid
Updating grid layout .xml file to display the intervals

--- a/MetraControl/BillingManagement/App_LocalResources/IntervalManagementList.aspx.resx
+++ b/MetraControl/BillingManagement/App_LocalResources/IntervalManagementList.aspx.resx
@@ -123,6 +123,9 @@
   <data name="TEXT_END_DATE" xml:space="preserve">
     <value>End Date</value>
   </data>
+  <data name="TEXT_GRID_TITLE" xml:space="preserve">
+    <value>Billable Intervals</value>
+  </data>
   <data name="TEXT_GROUP" xml:space="preserve">
     <value>Group</value>
   </data>
