FEAT-3300:"View subscription details when approving a subscription create or update" Task FEAT-3513:"Add Functional Test and fix Unit Tests"
1. Mock DB access;
2. Move common test data to Test Initialize methods;
3. Remove obsolete Unit Test;
4. Add commented out Func.Test for Approvals of Subscriptions. (Unstable test);
5. Add testsettings to Approvals.sln not to deploy DLLs to OUT folder every time;
6. Correct type in UDRC section name.

--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es.resx
@@ -139,7 +139,7 @@
     <value>[es] Subscription Properties</value>
   </data>
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
-    <value>[es] Product Offering Recurring Change Metrics</value>
+    <value>[es] Product Offering Recurring Charge Metrics</value>
   </data>
   <data name="UDRC_NAME" xml:space="preserve">
     <value>[es] Metric Name</value>
