--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es-mx.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es-mx.resx
@@ -139,7 +139,7 @@
     <value>[es-mx] Subscription Properties</value>
   </data>
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
-    <value>[es-mx] Product Offering Recurring Change Metrics</value>
+    <value>[es-mx] Product Offering Recurring Charge Metrics</value>
   </data>
   <data name="UDRC_NAME" xml:space="preserve">
     <value>[es-mx] Metric Name</value>
