--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
@@ -139,7 +139,7 @@
     <value>[pt-BR] Subscription Properties</value>
   </data>
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
-    <value>[pt-BR] Product Offering Recurring Change Metrics</value>
+    <value>[pt-BR] Product Offering Recurring Charge Metrics</value>
   </data>
   <data name="UDRC_NAME" xml:space="preserve">
     <value>[pt-BR] Metric Name</value>
