--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.resx
@@ -139,7 +139,7 @@
     <value>Subscription Properties</value>
   </data>
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
-    <value>Product Offering Recurring Change Metrics</value>
+    <value>Product Offering Recurring Charge Metrics</value>
   </data>
   <data name="UDRC_NAME" xml:space="preserve">
     <value>Metric Name</value>
