--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.de.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.de.resx
@@ -132,6 +132,9 @@
   <data name="TEXT_AMOUNT" xml:space="preserve">
     <value>{DE}Amount</value>
   </data>
+  <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
+    <value>{DE}Amount</value>
+  </data>   
   <data name="TEXT_CREATED_BY" xml:space="preserve">
     <value>{DE}Created By</value>
   </data>
@@ -147,7 +150,13 @@
   <data name="TEXT_TAX" xml:space="preserve">
     <value>{DE}Tax</value>
   </data>
+  <data name="TEXT_DISPLAY_TAX" xml:space="preserve">
+    <value>{DE}Tax</value>
+  </data>  
   <data name="TEXT_TOTAL" xml:space="preserve">
     <value>{DE}Total</value>
   </data> 
+  <data name="TEXT_DISPLAY_TOTAL" xml:space="preserve">
+    <value>{DE}Total</value>
+  </data>   
 </root>
