--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.it.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.it.resx
@@ -132,6 +132,9 @@
   <data name="TEXT_AMOUNT" xml:space="preserve">
     <value>{IT}Amount</value>
   </data>
+  <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
+    <value>{IT}Amount</value>
+  </data>    
   <data name="TEXT_CREATED_BY" xml:space="preserve">
     <value>{IT}Created By</value>
   </data>
@@ -147,7 +150,13 @@
   <data name="TEXT_TAX" xml:space="preserve">
     <value>{IT}Tax</value>
   </data>
+  <data name="TEXT_DISPLAY_TAX" xml:space="preserve">
+    <value>{IT}Tax</value>
+  </data>   
   <data name="TEXT_TOTAL" xml:space="preserve">
     <value>{IT}Total</value>
   </data> 
+  <data name="TEXT_DISPLAY_TOTAL" xml:space="preserve">
+    <value>{IT}Total</value>
+  </data>     
 </root>
