--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.ja.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.ja.resx
@@ -676,7 +676,7 @@
     <value>Passwords do not match.</value>
   </data>  
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>The format is wrong, ie: 305-444-1234</value>
+    <value>Enter a valid phone number. Format: 555-555-5555</value>
   </data>    
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>Credit card format is invalid</value>
