--- a/App_GlobalResources/JSConsts.ja.resx
+++ b/App_GlobalResources/JSConsts.ja.resx
@@ -1210,7 +1210,7 @@
     <value>(JAPANESE) Passwords do not match.</value>
   </data>  
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>(JAPANESE) The format is wrong, ie: 305-444-1234</value>
+    <value>(JAPANESE) Enter a valid phone number. Format: 555-555-5555</value>
   </data>    
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(JAPANESE) Credit card format is invalid</value>
