--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1198,7 +1198,7 @@
     <value>(BRAZILIAN PORTUGUESE) Passwords do not match.</value>
   </data>  
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>(BRAZILIAN PORTUGUESE) The format is wrong, ie: 305-444-1234</value>
+    <value>(BRAZILIAN PORTUGUESE) Enter a valid phone number. Format: 555-555-5555</value>
   </data>    
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(BRAZILIAN PORTUGUESE) Credit card format is invalid</value>
